test/trivial/mjoyner/seq/seq_index1.good
sequ1(1) is 5
sequ2(2) is 18
sequ4(1) is 1
sequ4(4) is 4
sequ4(7) is 7
sequ4(8) is Halt reached: seq_index1.chpl:24
error: sequence index out-of-bounds, index is 8
